[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/boogaloo/boogaloo-regular.ttf" type="FontFile" id=1]
[ext_resource path="res://scenes/gameplay/pause-layer.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/buttonpress.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/menu_title_shadow.png" type="Texture2D" id=4]

[sub_resource type="FontFile" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 2
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PressESCToOpenMenu" type="Label" parent="."]
visible = false
offset_left = 16.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 30.0
text = "Pause: Press ESC (keyboard) or START button (joypad)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.297465, 0.118798, 0.558594, 0.717647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 228.0
offset_bottom = -282.0
color = Color( 1, 1, 1, 0.847059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 240.0
offset_bottom = -294.0
color = Color( 0.682353, 0.121569, 0.266667, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxOptions" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -100.0
offset_right = 108.0
offset_bottom = 100.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Pause/VBoxOptions"]
offset_right = 191.0
offset_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "RESUME"

[node name="Main Menu" type="Button" parent="Pause/VBoxOptions"]
offset_top = 94.0
offset_right = 191.0
offset_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"

[node name="menu_title_shadow" type="Sprite2D" parent="Pause"]
position = Vector2( 800, 227.23 )
scale = Vector2( 0.481781, 0.481781 )
texture = ExtResource( 4 )
[connection signal="pressed" from="Pause/VBoxOptions/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/VBoxOptions/Main Menu" to="." method="_on_Main_Menu_pressed"]
